# example/springboot-webmvc-swagger-asciidoc/src/main/resources/swagger/swagger.json
@@ -60,6 +60,31 @@
             }
           }
         }
+      },
+      "post" : {
+        "tags" : [ "Проект" ],
+        "summary" : "Создание новых проектов",
+        "description" : "",
+        "operationId" : "createAllTask",
+        "parameters" : [ {
+          "in" : "body",
+          "name" : "body",
+          "required" : false,
+          "schema" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/definitions/ProjectDTO"
+            }
+          }
+        } ],
+        "responses" : {
+          "200" : {
+            "description" : "successful operation",
+            "schema" : {
+              "$ref" : "#/definitions/ResultRecord"
+            }
+          }
+        }
       }
     },
     "/api/v1/project/one/{id}" : {
